# gr4-tutorial

./: README.md
application/: CMakeLists.txt  README.md
application/app-blocklib/: CMakeLists.txt
application/app-blocklib/test/: CMakeLists.txt  qa_app.cpp
application/src/: gr4-dynamic-example.cpp  gr4-static-example.cpp
oot-module/: CMakeLists.txt  README.md
oot-module/include/gnuradio-4.0/oot/: oot_blocks.hpp
oot-module/test/: CMakeLists.txt  qa_oot.cpp
